Fixed bottom-spacing

--- a/default.css
+++ b/default.css
@@ -30,6 +30,7 @@ html, body, section {
 			padding-top:10px;
 			float:left;
 			-webkit-filter:grayscale(100%);
+			-moz-filter:grayscale(100%);
 		}
 
 		table, th, td {
@@ -107,19 +108,19 @@ html, body, section {
 		}
 
 		#aboutme {
-			margin-bottom: 350px;
+			margin-bottom: 450px;
 			text-align: justify;
 		}
 
 		#career {
 			clear:both;
-			margin-bottom: 350px;
+			margin-bottom: 450px;
 			text-align: left;
 			table-layout: fixed; 
 		}
 
 		#qa {
-			margin-bottom: 320px;		
+			margin-bottom: 450px;		
 		}
 
 		#contact-info {
